# claudex-setup

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENT.md  README.md  SECURITY.md  USER_GUIDE.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: extract-lessons.md  extract-social-lessons.md  optimise.md  review-pr.md
lessons/: .processed-social.json  .processed.json  INDEX.md
lessons/agents/: agent-team-debate-panel-for-decisions.md  agents-wizard-removed-edit-agents-dir.md  make-bad-state-impossible-not-tolerant.md  pre-aggregate-profiling-data-for-agents.md  scope-team-tasks-small-add-adversarial-reviewer.md  separate-evaluator-agent-exercises-the-running-app.md  shut-down-agent-teams-gracefully.md  spawn-teammates-via-the-agent-name-param-no-teamcreate.md
lessons/automation/: background-agents-auto-open-draft-prs.md  drive-playwright-for-browser-automation-and-authed-scraping.md  encode-agent-mistakes-as-lint-rules-with-the-fix-in-the-message.md  feed-posttooluse-block-back-with-continueonblock.md  guard-unattended-agent-runs-with-a-stall-watchdog-and-bounded-retry.md  hook-matchers-exact-match-not-substring.md  run-a-standing-refactor-agent-to-pay-down-drift.md  stop-hook-8-block-cap.md  trigger-an-agent-on-pipeline-failure-to-self-heal.md  version-control-agent-state-with-a-daily-git-sync.md
references/: agentic-coding-voices.md  project-structure.md  transcript-fetch-throttling.md
scripts/: fetch_transcripts.py  install_scheduled_task.ps1  youtube-url-updater.task.xml
(+80 files in other folders)
